Bug 285362 - calendar-popup too small
Summary: calendar-popup too small
Status: RESOLVED FIXED
Alias: None
Product: plasma4
Classification: Unmaintained
Component: widget-clock (other bugs)
Version First Reported In: 4.8.80 (beta1)
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-10-31 02:08 UTC by FabiB
Modified: 2014-11-01 18:41 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description FabiB 2011-10-31 02:08:42 UTC
Version:           unspecified (using KDE 4.7.2) 
OS:                Linux

After every restart my calender looks like this:
http://i.imgur.com/z3KhU.png (well not the color, but the size ^^)
so i have to resize it everytime. my display is in 1024x600 if the popup checks this. The same Problem on my mothers Laptop

Reproducible: Always

Steps to Reproduce:
1. Start the System
2. Click one of your clocks in the panel

Actual Results:  
calendar pops up bit is to smal

Expected Results:  
should be in a good size

a friend of me has added the option
X-Plasma-DefaultSize=470,275
at the end of the file 
/usr/share/kde4/services/plasma-applet-calendar.desktop
it works here for the moment, but with the next update it will be gone
Comment 1 Boris Yonchev 2012-01-04 15:02:35 UTC
I was able to reproduce the bug
Comment 2 Myriam Schweingruber 2012-01-11 22:08:02 UTC
Confirmed with KDE 4.7.4 by CodeIn student.
Comment 3 Anne-Marie Mahfouf 2012-06-04 16:02:18 UTC
Still exists in 4.8.80
Comment 4 Aaron J. Seigo 2012-06-14 11:48:27 UTC
Git commit ec5a42bf48e792e8442be748d207f83367b15c11 by Aaron Seigo.
Committed on 14/06/2012 at 13:18.
Pushed by aseigo into branch 'master'.

make the calendar layout behave rather more nicely

M  +30   -5    libs/plasmaclock/calendar.cpp
M  +1    -0    libs/plasmaclock/calendar.h

http://commits.kde.org/kde-workspace/ec5a42bf48e792e8442be748d207f83367b15c11
Comment 5 Aaron J. Seigo 2012-06-14 11:48:27 UTC
Git commit d39bc75d6d0708625e861a0cd7f833fafb1135d7 by Aaron Seigo.
Committed on 14/06/2012 at 12:43.
Pushed by aseigo into branch 'master'.

preferred size is handled by the widget itself; don't mess with it here

M  +1    -5    plasma/generic/applets/calendar/calendar.cpp

http://commits.kde.org/kde-workspace/d39bc75d6d0708625e861a0cd7f833fafb1135d7
Comment 6 Theo 2014-10-07 17:49:35 UTC
Is that fixed???

In Kubuntu 14.04?

In Kubuntu Precise 12.04.5 with KDE 4.4.8.5 the calendar window as seen in the pic above is still too small to read the calendar entries easily.
Comment 7 Christoph Feck 2014-11-01 18:41:42 UTC
You can resize the calender from the edge (at least with KDE 4.11.5).