preferred size is handled by the widget itself; don't mess with it here

BUG:285362