plasma/generic/applets/calendar/calendar.cpp
@@ -49,11 +49,7 @@ void CalendarApplet::init()
 {
     setPopupIcon("view-pim-calendar");
     m_calendarWidget = new Plasma::Calendar(this);
-    if (m_calendarWidget->isDisplayingDateDetails()) {
-        m_calendarWidget->setPreferredSize(440, 250);
-    } else {
-        m_calendarWidget->setPreferredSize(220, 250);
-    }
+    m_calendarWidget->setMinimumSize(220, 250);
     updateDate();
     configChanged();
     setFocusPolicy(Qt::StrongFocus);
